[project]
name = "opet-mcp"
version = "0.1.0"
description = "OPET MCP Project"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.6.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"] 
